syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/DebdipWritesCode/VisitorManagementSystem/pb";

message LoginUserRequest {
  string phone_number = 1;
}

message LoginUserResponse {
  User user = 1;
}